err.txt
evalmachine.<anonymous>:189
        el.setAttribute('marker-end', \`url(#\${markerId})\`);
                                      ^

SyntaxError: Invalid or unexpected token
    at new Script (node:vm:117:7)
    at createScript (node:vm:269:10)
    at Object.runInThisContext (node:vm:317:10)
    at [eval]:1:21
    at runScriptInThisContext (node:internal/vm:209:10)
    at node:internal/process/execution:449:12
    at [eval]-wrapper:6:24
    at runScriptInContext (node:internal/process/execution:447:60)
    at evalFunction (node:internal/process/execution:87:30)
    at evalScript (node:internal/process/execution:99:3)